fix alignment in first section

--- a/style.css
+++ b/style.css
@@ -52,11 +52,14 @@ body {
 .cont {
     display: flex;
     align-content: center;
+    align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
-    margin-left: 15%;
-    margin-right: 15%;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 100px;
+    margin-top: 40px;
 }
 .bttn {
     width: 90px;
@@ -66,6 +69,9 @@ body {
     border-radius: 2px;
     color: #f9faf8;
     font-weight: bold;
+}
+.img1 {
+    display: flex;
 }
 .cont2 {  /*4 images section */
     align-items: center;
